test/fail/semicolon1.min
program
    number x
start
   x := 2;
   x := 3 $$ Semicolon missing
end

